made p color pink and added a little

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       width: 400px;
       margin: 50px auto;
       font: 30px Monaco,"Courier New","DejaVu Sans Mono","Bitstream Vera Sans Mono",monospace;
+      color: pink;
     }
     #rainbow-message {
       position: absolute;
@@ -56,7 +57,7 @@
   Simon Ox is cool
 </p>
 <div id="rainbow-message" style="display:none">
-Double repositories all the way across the sky!<br/>
+Double repositories all the way across the sky! NO WAY!<br/>
 <a href="http://help.github.com/fork-a-repo/">What does it mean?</a>
 </div>
 </body>
